--- a/css/home.css
+++ b/css/home.css
@@ -6,8 +6,6 @@
     align-items: flex-start; /* Alinha o conteúdo à esquerda */
     height: 100vh; /* Altura total da janela */
     padding-left: 10%; /* Espaço à esquerda */
-    background-color: #515151; /* Fundo claro */
-    color: #333; /* Cor padrão do texto */
     font-family: Arial, sans-serif; /* Fonte padrão */
 }
 
@@ -15,18 +13,13 @@
     font-size: 3rem; /* Tamanho grande para o nome */
     font-weight: bold; /* Texto em negrito */
     margin: 0; /* Remove margens externas */
+    color: #90DDF0;
 }
 
 .dynamic-text {
-    display: inline-block;
+    font-size: 2rem;  /* Font size */
     font-weight: bold;
     white-space: nowrap;
     overflow: hidden;
-    min-width: 350px; /* Adjust this based on the longest text */
-    text-align: left; /* Align text to the start */
-}
-
-.dynamic-text {
     display: inline-block;
-    font-weight: bold; /* Destaque no texto dinâmico */
 }
