--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #333;
-    color: white;
+    background-color: #24212c;
     display: flex;
     justify-content: space-between;
     padding: 0.5em 1em;
@@ -48,13 +47,4 @@
 
 .main-content {
     padding: 2em 1em;
-}
-
-.footer {
-    text-align: center;
-    padding: 1em;
-    background-color: #333;
-    color: white;
-    margin-top: 2em;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
