--- a/css/about.css
+++ b/css/about.css
@@ -28,6 +28,7 @@
     white-space: nowrap;
     overflow: hidden;
     font-size: 2rem;
+    vertical-align: middle; /* or top, bottom, etc. */
 }
 
 /* Estilização dos ícones das tecnologias */
